src/App.css
.App{
  width: 100%;
  height: 100%;
}

body {
  line-height: 1.5;
}

.flex-grow{
  flex-grow: 1;
}

:root{
  --header-height: 64px;
  --sidebar-width: 295px;
}

/* Header */

.header{
  text-align: center;
  max-height: var(--header-height) !important;
}

.menu-button{
  margin-left: -12px;
  margin-right: 20px;
}

/* Drawer & Sidebar */

.drawer-mobile{
  display: block;
  position: relative;
}

.drawer-desktop{
  display: none;
}

.sidebar-container {
  width: 100%;
  z-index: 1;
  overflow: hidden;
  position: relative;
}

.sidebar{
  width: var(--sidebar-width);
  padding: 12px;
}

.sidebar .filter-input{
  padding: 0 15px;
}

.sidebar .list-item{
  padding: 4px 14px;
  margin: 5px 0;
}

.sidebar .list-item-selected{
  background-color: #ffd6d2;
}

/* Map */
#map{
  width: 100%;
  height: calc(100% - var(--header-height));
}

@media screen and (min-width: 960px){
  .header{
    margin-left: var(--sidebar-width);
    width: calc(100% - var(--sidebar-width)) !important;
  }

  .menu-button{
    display: none !important;
  }

  .drawer-mobile{
    display: none;
  }
  
  .drawer-desktop{
    display: block;
    position: relative;
  }

  #map{
    margin-left: var(--sidebar-width);
    width: calc(100% - var(--sidebar-width));
  }
}

